# c2rust

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
c2rust/: Cargo.toml
c2rust-analyze/src/dataflow/: type_check.rs
c2rust-ast-exporter/src/: AstExporter.cpp
c2rust-transpile/src/: lib.rs
c2rust-transpile/src/build_files/: mod.rs
c2rust-transpile/src/c_ast/: mod.rs
c2rust-transpile/src/translator/: mod.rs
c2rust/src/: lib.rs
deps-builder/: Cargo.toml
deps-builder/src/: lib.rs  main.rs
deps-exporter/: Cargo.toml
deps-exporter/src/: lib.rs
deps-exporter/src/c_ast/: conversion.rs
deps-exporter/src/compile_cmds/: mod.rs
rust/src/lib/: allocator.rs  areadlink.rs  areadlink_with_size.rs  argmatch.rs  argv_iter.rs  backup_find.rs  backup_rename.rs  backupfile.rs  base32.rs  base64.rs  bitrotate.rs  buffer_lcm.rs  c_strcasecmp.rs  c_strncasecmp.rs  c_strtod.rs  c_strtold.rs  canon_host.rs  canonicalize.rs  careadlinkat.rs  chdir_long.rs  chmodat.rs  chownat.rs  close_stream.rs  closein.rs  closeout.rs  copy_acl.rs  count_leading_zeros.rs  cycle_check.rs  di_set.rs  dirchownmod.rs  dtoastr.rs  dtotimespec.rs  exclude.rs  fcntl.rs  fflush.rs  file_set.rs  file_type.rs  filemode.rs  filenamecat.rs  filenamecat_lgpl.rs  (+125 more)
rust/src/src/: basename.rs  basenc.rs  cat.rs  chcon.rs  chgrp.rs  chmod.rs  chown.rs  chown_core.rs  cksum.rs  comm.rs  copy.rs  cp.rs  cp_hash.rs  crctab.rs  csplit.rs  cut.rs  date.rs  dd.rs  df.rs  digest.rs  dircolors.rs  dirname.rs  du.rs  echo.rs  env.rs  expand.rs  expand_common.rs  expr.rs  false.rs  find_mount_point.rs  (+37 more)
(+13 files in other folders)
